src/test/deca/context/invalid/created/Objet/VoidCast.deca
// Description:
//  Teste le cast d'un objet en void


class A{
}

{
    A newA = new A();
    println((void)(newA));
}